# Computer-Vision

./: pyproject.toml
bonn-assignments/Sheet00/: Sheet00_template.py  sheet_00.ipynb
machine-vision/: lab1.ipynb  lab4.ipynb
object-detection/: Locate-anything-Nvidia.ipynb  YOLO-Resnet.ipynb  YOLO.ipynb  YOLO_Pretrain_ImageNet.ipynb  tiny_imagenet_final_weights.pth
open-cv-cerification/: Accessing_Camera.ipynb  Annotating_Image.ipynb  Basic_Image_Manipulation.ipynb  Getting_Started_With_Images.ipynb  Image_Alignment.ipynb  Image_Enhancement.ipynb  Image_Filtering.ipynb  Panorama.ipynb  Writing_Video.ipynb
